# envy

./: .gitignore  .gitmodules  Cargo.toml  README.md  bibtex_parser.py  citations.py  config.py  filter.js  init.sh  migrate.sh  new-paper.py  requirements.txt  serve.py  test_bibtex_parser.py  today.py
src/: api.rs  bibtex.rs  file.rs  file_requests.rs  file_tokenizer.rs  lib.rs  main.rs  mathjax_cfg.js  script.js  state.rs  style.css  watch.rs
