[package]
name = "envy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.1", features = ["tokio"] }
pulldown-cmark = { version = "0.9.3", default-features = false , features = ["simd"]}
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = "0.3.18"
walkdir = "2.4.0"
