[package]
name = "envy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
reload_css = []

[dependencies]
axum = "0.7.5"
cfg-if = "1.0.0"
clap = { version = "4.5.17", features = ["derive"] }
cli-clipboard = "0.4.0"
itertools = "0.13.0"
mime_guess = "2.0.4"
notify = "6.1.1"
pulldown-cmark = { version = "0.9.3", default-features = false , features = ["simd"]}
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
shellexpand = "3.1.0"
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = "0.3.18"
walkdir = "2.4.0"
